// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<Poster /> should render 1`] = `
<div
  class="sc-ifAKCX cRQFzp"
>
  <div
    class="sc-bZQynM mjAAS"
  >
    10
    /10
  </div>
  <div
    class="sc-VigVT iOQNnG"
    data-testid="poster-img-container"
  >
    <img
      alt="Movie test name"
      src="https://test.url.com"
    />
  </div>
  <div
    class="sc-gzVnrw dFkHji"
  >
    <div
      class="sc-EHOje IcjOp"
      data-testid="name-container"
    >
      <strong>
        Movie test name
      </strong>
    </div>
  </div>
</div>
`;

exports[`<Poster /> should render correclty when showing buttons 1`] = `
<div
  class="sc-ifAKCX cRQFzp"
>
  <div
    class="sc-bZQynM mjAAS"
  >
    10
    /10
  </div>
  <div
    class="sc-VigVT iOQNnG"
    data-testid="poster-img-container"
  >
    <img
      alt="Movie test name"
      src="https://test.url.com"
    />
  </div>
  <div
    class="sc-gzVnrw dFkHji"
  >
    <div
      class="sc-EHOje IcjOp"
      data-testid="name-container"
    >
      <strong>
        Movie test name
      </strong>
    </div>
    <div
      class="sc-bdVaJa dFjmrK"
    >
      <button
        class="sc-bwzfXH sc-htpNat joOBQQ"
        type="button"
      >
        <svg
          color="#fff"
          fill="currentColor"
          height="20"
          size="20"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 448 512"
          width="20"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
          />
        </svg>
        <span>
          Watch Later
        </span>
      </button>
      <button
        class="sc-bwzfXH sc-bxivhb hzAuhW"
        type="button"
      >
        <svg
          color="#fff"
          fill="currentColor"
          height="24"
          size="24"
          stroke="currentColor"
          stroke-width="0"
          style="color: rgb(255, 255, 255);"
          viewBox="0 0 576 512"
          width="24"
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M259.3 17.8L194 150.2 47.9 171.5c-26.2 3.8-36.7 36.1-17.7 54.6l105.7 103-25 145.5c-4.5 26.3 23.2 46 46.4 33.7L288 439.6l130.7 68.7c23.2 12.2 50.9-7.4 46.4-33.7l-25-145.5 105.7-103c19-18.5 8.5-50.8-17.7-54.6L382 150.2 316.7 17.8c-11.7-23.6-45.6-23.9-57.4 0z"
          />
        </svg>
      </button>
    </div>
  </div>
</div>
`;
